--- a/config.json
+++ b/config.json
@@ -5,16 +5,19 @@
     "tt_description": "module_desc",
     "documentation": "README.md",
     "namespace": "UWMadison\\ReportTweaks",
-    "authors": [{
-        "name": "Adam Nunez",
-        "email": "Adam.Nunez@ctri.wisc.edu",
-        "institution": "UW Madison - Center for Tobacco Research and Intervention "
-    }],
+    "authors": [
+        {
+            "name": "Adam Nunez",
+            "email": "Adam.Nunez@ctri.wisc.edu",
+            "institution": "UW Madison - Center for Tobacco Research and Intervention "
+        }
+    ],
     "permissions": [
         "redcap_every_page_top"
     ],
-    "framework-version": 8,
-    "project-settings": [{
+    "framework-version": 9,
+    "project-settings": [
+        {
             "key": "info",
             "name": "This module is configured via the edit report screen. Individual user configuration is saved via a cookie on the user's browser.<br><br><a>Click here to view all saved configuration.</a>",
             "tt_name": "module_info",
